created imgs folder for organization

--- a/alchlob.html
+++ b/alchlob.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Alchlob - Pokedex</title>
-    <link rel="icon" href="pokedex.png">
+    <link rel="icon" href="imgs/pokedex.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-red-600">
@@ -13,7 +13,7 @@
         <div class="flex justify-between items-center py-4">
             <div class="flex text-3xl font-bold">
                 <a href="index.html">
-                    <img src="pokedex.png" width="50" height="50" class="ml-2">
+                    <img src="imgs/pokedex.png" width="50" height="50" class="ml-2">
                 </a>
                 <a href="index.html" class="text-slate-50 pl-5 text-center mt-3">Pokedex</a>
             </div>
