--- a/articlaw.html
+++ b/articlaw.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Alchlob - Pokedex</title>
+    <title>Articlaw - Pokedex</title>
     <link rel="icon" href="imgs/pokedex.png">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -23,8 +23,8 @@
 
     <!-- Main Section -->
     <div class="container mx-auto py-8">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6" id="alchlob-container">
-            <script src="alchlob.js"></script> <!-- External JavaScript file for evolutions -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6" id="articlaw-container">
+            <script src="articlaw.js"></script> <!-- External JavaScript file for evolutions -->
         </div>
 
         <!-- Go Back Button -->
