Added icons for each type, added pages for the rest of the Pokemon

--- a/index.html
+++ b/index.html
@@ -14,23 +14,22 @@
         <div class="flex justify-between items-center py-4">
             <div class="flex text-3xl font-bold">
                 <a href="index.html">
-                <img src="imgs/pokedex.png" width="50" height="50" href="index.html" class="ml-2">
+                    <img src="imgs/Pokedex.png" width="50" height="50" class="ml-2" alt="Pokedex">
                 </a>
-            <a href="index.html" class="text-slate-50 pl-5 text-center mt-3">Pokedex</a>
+                <a href="index.html" class="text-slate-50 pl-5 text-center mt-3">Pokedex</a>
             </div>
-        <hr></hr>
+            <hr>
         </div>
     </div> <!-- end of navbar -->
 
- <!-- Pokemon Section -->
- <div class="container mx-auto py-8 bg-red-600">
-    <h1 class="text-4xl font-bold text-stone-900 justify-center text-center mb-8">Pokemon</h1>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="pokemon-container">
-        <script src="pokemon.js"></script> <!-- Reference to the external JavaScript file -->
+    <!-- Pokemon Section -->
+    <div class="container mx-auto py-8 bg-red-600">
+        <img src="imgs/Pokemon.png" alt="Pokemon" class="mx-auto mb-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="pokemon-container">
+            <script src="pokemon.js"></script> <!-- Reference to the external JavaScript file -->
+        </div>
     </div>
-</div>
-<!-- End Pokemon Section -->
+    <!-- End Pokemon Section -->
 
 </body>
-
 </html>
